[package]
name = "linkedin-rs"
version = "0.0.0"
authors = ["terkwood <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.3"
oauth2 = "2.0.0"
log = "0.4.8"
env_logger = "0.7.1"
tokio = { version = "0.2", features = ["macros"] }
serde = "1.0.110"
serde_derive = "1.0.110"