[package]
name = "linkedin-oauth-endpoint"
version = "0.0.0"
authors = ["Felix Terkhorn <has@email.link>"]
edition = "2018"

[dependencies]
# Powerful date and time functionality
chrono = { version = "0.4.6", features = ["serde"] }
 
# Lazy static initialization
lazy_static = "1.3.0"

# Rocket Webserver
rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", features = ["json", "diesel_mysql_pool"] }

# Serialization/Deserialization
serde_json = "1.0.39"
serde = "1.0.90"
serde_derive = "1.0.90"
