[package]
name = "linkedin-oauth-endpoint"
version = "0.0.0"
authors = ["Felix Terkhorn <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"

[dependencies]
# Powerful date and time functionality
chrono = { version = "0.4.6", features = ["serde"] }
 
# Lazy static initialization
lazy_static = "1.3.0"
 # Serialization/Deserialization
serde_json = "1.0.39"
serde = "1.0.90"
serde_derive = "1.0.90"
