[package]
name = "linkedin-oauth-endpoint"
version = "0.0.0"
authors = ["Felix Terkhorn <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
#oxide-auth = "0.5.0-preview.0" 
#actix = "0.9.0"
#actix-web = "2.0.0"
#futures = { version = "0.1" }  # ow
#url = "2.1.1"
