[package]
name = "linkedin-oauth-endpoint"
version = "0.0.0"
authors = ["Felix Terkhorn <38859656+Terkwood@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix = { version = "0.7.9" }
actix-web = { version = "0.7.17"  }
oxide-auth =  { git = "https://github.com/Terkwood/oxide-auth"} 
base64 = "0.9"
chrono = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ring = "0.13"
rmp-serde = "^0.13"
url = "1.7"
mime = { version = "0.3.13", optional = true }
futures = { version = "0.1" }
reqwest = "0.9"
